--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
     <footer>
         <p id="viajesChile"> Viajes Chile </p>
         <ul id="iconos">
-            <img src="assets\img\square-github.svg" alt="" width="30" height="30">
-            <img src="assets\img\linkedin.svg" alt="" width="30" height="30">
-            <img src="assets\img\square-twitter (1).svg" alt="" width="30" height="30">
-            <img src="assets\img\square-facebook.svg" alt="" width="30" height="30">
+           <a href="https://github.com/"><img src="assets\img\square-github.svg" alt="" width="30" height="30"></a> 
+           <a href="https://www.linkedin.com/"><img src="assets\img\linkedin.svg" alt="" width="30" height="30"></a> 
+           <a href="https://twitter.com/"><img src="assets\img\square-twitter (1).svg" alt="" width="30" height="30"></a> 
+           <a href="https://es-la.facebook.com/"><img src="assets\img\square-facebook.svg" alt="" width="30" height="30"></a> 
         </ul>
     </footer>
     <!--Fin Footer-->
