--- a/index.html
+++ b/index.html
@@ -200,19 +200,21 @@
     <footer>
         <p id="viajesChile"> Viajes Chile </p>
         <ul id="iconos">
-           <a href="https://github.com/"><img src="assets\img\square-github.svg" alt="" width="30" height="30"></a> 
-           <a href="https://www.linkedin.com/"><img src="assets\img\linkedin.svg" alt="" width="30" height="30"></a> 
-           <a href="https://twitter.com/"><img src="assets\img\square-twitter (1).svg" alt="" width="30" height="30"></a> 
-           <a href="https://es-la.facebook.com/"><img src="assets\img\square-facebook.svg" alt="" width="30" height="30"></a> 
+            <a href="https://github.com/"><img src="assets\img\square-github.svg" alt="" width="30" height="30"></a>
+            <a href="https://www.linkedin.com/"><img src="assets\img\linkedin.svg" alt="" width="30" height="30"></a>
+            <a href="https://twitter.com/"><img src="assets\img\square-twitter (1).svg" alt="" width="30"
+                    height="30"></a>
+            <a href="https://es-la.facebook.com/"><img src="assets\img\square-facebook.svg" alt="" width="30"
+                    height="30"></a>
         </ul>
     </footer>
     <!--Fin Footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-        <script>const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-            const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))</script>
-        <script src="assets\js\script.js"></script>
+    <script>const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))</script>
+    <script src="assets\js\script.js"></script>
 </body>
 
 </html>
